fix Bug #72441, after edit the join of physical view table to save it to the runtime partition.